Fixed layout issue for small screen on IE11.

--- a/client/app/main/event-card.less
+++ b/client/app/main/event-card.less
@@ -7,7 +7,7 @@
   });
 
   .small({
-    width: 100% !important;
+    width: 100vw !important;
   });
 }
 
@@ -40,6 +40,13 @@
   .small({
     flex-direction: column !important;
     align-items: flex-start !important;
+  });
+
+}
+
+.event-card-item {
+  .small({
+    flex: 0 0 auto !important;
   });
 }
 
